Closed Bug 579806 Opened 14 years ago Closed 14 years ago

warning: comparison between signed and unsigned integer expressions in nsEudoraMailbox

Categories

(MailNews Core :: Import, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

mailnews/import/eudora/src/nsEudoraMailbox.cpp:
 In member function ‘nsresult nsEudoraMailbox::ImportMessage(SimpleBufferTonyRCopiedOnce&, SimpleBufferTonyRCopiedOnce&, nsCString&, nsCAutoString&, nsIOutputStream*, PRInt32*)’:
589: warning: comparison between signed and unsigned integer expressions
593: warning: comparison between signed and unsigned integer expressions
 In member function ‘nsresult nsEudoraMailbox::WriteFromSep(nsIOutputStream*)’:
1214: warning: comparison between signed and unsigned integer expressions
Attached patch changesSplinter Review
this patch doesn't quite match the warnings i pasted here. which probably means it's interacting with some other patch in my tree. I have *lots* of patches in my tree, so we'll see....
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #458235 - Flags: review?(bienvenu)
Attachment #458235 - Flags: review?(bienvenu) → review+
http://hg.mozilla.org/comm-central/rev/9477aacd5a60
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: