Bug 579806 warning: comparison between signed and unsigned integer expressions in nsEudoraMailbox r=bienvenu

--HG--
extra : rebase_source : 3898edededa44de8ec2510604668fb82e9472163